--- a/package.json
+++ b/package.json
@@ -1,44 +1,62 @@
 {
-  "name": "propovoice",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:therakib7/propovoice.git"
-  },
-  "homepage": "",
-  "scripts": {
-    "dev": "mix",
-    "prod": "mix -p",
-    "watch": "mix watch",
-    "package": "mix -p && cross-env NODE_ENV=package mix",
-    "zip": "npm run package && cross-env NODE_ENV=zip mix"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "archiver": "^5.2.0",
-    "autoprefixer": "^10.4.0",
-    "cli-color": "^2.0.0",
-    "cross-env": "^7.0.3",
-    "emojic": "^1.1.16",
-    "fs-extra": "^9.0.1",
-    "laravel-mix": "^6.0.8",
-    "postcss": "^8.4.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.37.0",
-    "sass-loader": "^8.0.2",
-    "tailwindcss": "^3.0.7",
-    "wp-pot": "^1.9.8"
-  },
-  "dependencies": {
-    "@emotion/core": "^10.1.1",
-    "axios": "^0.21.4",
-    "classnames": "^2.3.1",
-    "react-router-dom": "^6.2.1"
-  }
+	"name": "propovoice",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:therakib7/propovoice.git"
+	},
+	"homepage": "",
+	"scripts": {
+		"dev": "mix",
+		"prod": "mix -p",
+		"watch": "mix watch",
+		"package": "mix -p && cross-env NODE_ENV=package mix",
+		"zip": "npm run package && cross-env NODE_ENV=zip mix"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@babel/preset-react": "^7.14.5",
+		"archiver": "^5.2.0",
+		"autoprefixer": "^10.4.0",
+		"cli-color": "^2.0.0",
+		"cross-env": "^7.0.3",
+		"emojic": "^1.1.16",
+		"fs-extra": "^9.0.1",
+		"laravel-mix": "^6.0.8",
+		"postcss": "^8.4.5",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"sass": "^1.37.0",
+		"sass-loader": "^8.0.2",
+		"tailwindcss": "^3.0.7",
+		"wp-pot": "^1.9.8"
+	},
+	"dependencies": {
+		"@editorjs/checklist": "latest",
+		"@editorjs/code": "latest",
+		"@editorjs/delimiter": "latest",
+		"@editorjs/editorjs": "^2.22.2",
+		"@editorjs/embed": "latest",
+		"@editorjs/header": "latest",
+		"@editorjs/image": "latest",
+		"@editorjs/inline-code": "latest",
+		"@editorjs/link": "latest",
+		"@editorjs/list": "latest",
+		"@editorjs/marker": "latest",
+		"@editorjs/paragraph": "latest",
+		"@editorjs/quote": "latest",
+		"@editorjs/raw": "latest",
+		"@editorjs/simple-image": "latest",
+		"@editorjs/table": "latest",
+		"@editorjs/warning": "latest",
+		"@emotion/core": "^10.1.1",
+		"axios": "^0.21.4",
+		"classnames": "^2.3.1",
+		"react-editor-js": "latest",
+		"react-router-dom": "^6.2.1"
+	}
 }
