working with client crud and editor js

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"autoprefixer": "^10.4.0",
 		"cli-color": "^2.0.0",
 		"cross-env": "^7.0.3",
+		"editorjs-inline-font-size-tool": "^1.0.1",
 		"emojic": "^1.1.16",
 		"fs-extra": "^9.0.1",
 		"laravel-mix": "^6.0.8",
@@ -48,7 +49,7 @@
 		"@editorjs/list": "latest",
 		"@editorjs/marker": "latest",
 		"@editorjs/nested-list": "latest",
-		"@editorjs/paragraph": "latest",
+		"@editorjs/paragraph": "^2.8.0",
 		"@editorjs/quote": "latest",
 		"@editorjs/raw": "latest",
 		"@editorjs/simple-image": "latest",
@@ -56,8 +57,10 @@
 		"@editorjs/underline": "^1.0.0",
 		"@editorjs/warning": "latest",
 		"@emotion/core": "^10.1.1",
+		"@wordpress/react-i18n": "^3.1.0",
 		"axios": "^0.21.4",
 		"classnames": "^2.3.1",
+		"editorjs-text-alignment-blocktune": "^1.0.3",
 		"editorjs-text-color-plugin": "^1.1.22",
 		"react-editor-js": "latest",
 		"react-router-dom": "^6.2.1"
