--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"editorjs-text-alignment-blocktune": "^1.0.3",
 		"editorjs-text-color-plugin": "^1.1.22",
 		"react-editor-js": "latest",
-		"react-router-dom": "^6.2.1"
+		"react-router-dom": "^6.2.1",
+		"react-toastify": "^8.1.1"
 	}
 }
