--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
 		"editorjs-text-color-plugin": "^1.1.22",
 		"react-editor-js": "latest",
 		"react-router-dom": "^6.2.1",
-		"react-toastify": "^8.1.1"
+		"react-toastify": "^8.1.1", 
+		"prop-types": "^15.6.2", 
+		"react-beautiful-dnd": "latest"
 	}
 }
