--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"react-editor-js": "latest",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
-		"react-toastify": "^8.1.1"
+		"react-toastify": "^8.1.1",
+		"watch": "^1.0.2"
 	}
 }
