--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 		"react-editor-js": "latest",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
+		"react-select": "^5.2.2",
 		"react-toastify": "^8.1.1",
-		"watch": "^1.0.2"
+		"watch": "^0.13.0"
 	}
 }
