added date picker

--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
 		"@wordpress/react-i18n": "^3.1.1",
 		"axios": "^0.21.4",
 		"editorjs-text-alignment-blocktune": "^1.0.3",
-		"editorjs-text-color-plugin": "^1.1.22", 
+		"editorjs-text-color-plugin": "^1.1.22",
 		"prop-types": "^15.6.2",
 		"react-beautiful-dnd": "latest",
 		"react-content-loader": "^6.1.0",
+		"react-datepicker": "^4.7.0",
 		"react-editor-js": "latest",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
