--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"react-datepicker": "^4.7.0",
 		"react-dropzone": "^12.0.4",
 		"react-editor-js": "latest",
+		"react-moment": "^1.1.1",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
 		"react-select": "^5.2.2",
