--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
 		"jspdf": "^2.5.1",
 		"prop-types": "^15.6.2",
 		"react-beautiful-dnd": "latest",
+		"react-colorful": "^5.5.1",
 		"react-content-loader": "^6.1.0",
 		"react-datepicker": "^4.7.0",
-		"react-dropzone": "^12.0.4", 
+		"react-dropzone": "^12.0.4",
 		"react-editor-js": "latest",
 		"react-moment": "^1.1.1",
 		"react-paginate": "^8.1.0",
