--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
 		"@editorjs/warning": "latest",
 		"@emotion/core": "^10.1.1",
 		"@react-pdf/renderer": "^2.1.1",
+		"@stripe/react-stripe-js": "^1.7.0",
+		"@stripe/stripe-js": "^1.25.0",
 		"@wordpress/react-i18n": "^3.1.1",
 		"axios": "^0.21.4",
 		"editorjs-text-alignment-blocktune": "^1.0.3",
