added paypal stripe payment method

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"@editorjs/underline": "^1.0.0",
 		"@editorjs/warning": "latest",
 		"@emotion/core": "^10.1.1",
+		"@paypal/react-paypal-js": "^7.6.0",
 		"@react-pdf/renderer": "^2.1.1",
 		"@stripe/react-stripe-js": "^1.7.0",
 		"@stripe/stripe-js": "^1.25.0",
