--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"@editorjs/code": "latest",
 		"@editorjs/delimiter": "latest",
 		"@editorjs/editorjs": "^2.22.2",
-		"@editorjs/embed": "latest",
+		"@editorjs/embed": "^2.5.1",
 		"@editorjs/header": "latest",
 		"@editorjs/image": "latest",
 		"@editorjs/inline-code": "latest",
@@ -55,7 +55,7 @@
 		"@editorjs/raw": "latest",
 		"@editorjs/simple-image": "latest",
 		"@editorjs/table": "latest",
-		"@editorjs/underline": "^0.1.0",
+		"@editorjs/underline": "latest",
 		"@editorjs/warning": "latest",
 		"@emotion/core": "^10.1.1",
 		"@paypal/react-paypal-js": "^7.6.0",
@@ -65,6 +65,7 @@
 		"@wordpress/i18n": "^4.5.0",
 		"@wordpress/react-i18n": "^3.1.1",
 		"axios": "^0.21.4",
+		"editorjs-blocks-react-renderer": "^1.2.4",
 		"editorjs-text-alignment-blocktune": "^1.0.3",
 		"editorjs-text-color-plugin": "^1.1.22",
 		"html2canvas": "^1.4.1",
