--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
 		"@editorjs/underline": "latest",
 		"@editorjs/warning": "latest",
 		"@emotion/core": "^10.1.1",
+		"editorjs-blocks-react-renderer": "^1.2.4",
+		"editorjs-text-alignment-blocktune": "^1.0.3",
+		"editorjs-text-color-plugin": "^1.1.22",
 		"@paypal/react-paypal-js": "^7.6.0",
 		"@react-pdf/renderer": "^2.1.1",
 		"@stripe/react-stripe-js": "^1.7.0",
@@ -65,11 +68,6 @@
 		"@wordpress/i18n": "^4.5.0",
 		"@wordpress/react-i18n": "^3.1.1",
 		"axios": "^0.21.4",
-		"editorjs-blocks-react-renderer": "^1.2.4",
-		"editorjs-text-alignment-blocktune": "^1.0.3",
-		"editorjs-text-color-plugin": "^1.1.22",
-		"html2canvas": "^1.4.1",
-		"jspdf": "^2.5.1",
 		"prop-types": "^15.6.2",
 		"react-beautiful-dnd": "latest",
 		"react-colorful": "^5.5.1",
@@ -81,6 +79,7 @@
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
 		"react-select": "^5.2.2",
+		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
 		"watch": "^0.13.0"
 	}
