added additional amount

--- a/package.json
+++ b/package.json
@@ -58,16 +58,17 @@
 		"@editorjs/underline": "latest",
 		"@editorjs/warning": "latest",
 		"@emotion/core": "^10.1.1",
-		"editorjs-blocks-react-renderer": "^1.2.4",
-		"editorjs-text-alignment-blocktune": "^1.0.3",
-		"editorjs-text-color-plugin": "^1.1.22",
 		"@paypal/react-paypal-js": "^7.6.0",
 		"@react-pdf/renderer": "^2.1.1",
 		"@stripe/react-stripe-js": "^1.7.0",
 		"@stripe/stripe-js": "^1.25.0",
+		"@tinymce/tinymce-react": "^4.0.0",
 		"@wordpress/i18n": "^4.5.0",
 		"@wordpress/react-i18n": "^3.1.1",
 		"axios": "^0.21.4",
+		"editorjs-blocks-react-renderer": "^1.2.4",
+		"editorjs-text-alignment-blocktune": "^1.0.3",
+		"editorjs-text-color-plugin": "^1.1.22",
 		"prop-types": "^15.6.2",
 		"react-beautiful-dnd": "latest",
 		"react-colorful": "^5.5.1",
