working with group tiny editor

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"react-select": "^5.2.2",
 		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
+		"tinymce": "^6.0.1",
 		"watch": "^0.13.0"
 	}
 }
