--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"react-beautiful-dnd": "latest",
 		"react-colorful": "^5.5.1",
 		"react-content-loader": "^6.1.0",
+		"react-country-region-selector": "^3.4.0",
 		"react-datepicker": "^4.7.0",
 		"react-dropzone": "^12.0.4",
 		"react-editor-js": "latest",
@@ -83,6 +84,7 @@
 		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
 		"tinymce": "^6.0.1",
+		"uuid": "^8.3.2",
 		"watch": "^0.13.0"
 	}
 }
