--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"react-datepicker": "^4.7.0",
 		"react-dropzone": "^12.0.4",
 		"react-editor-js": "latest",
+		"react-google-drive-picker": "^1.2.0",
 		"react-moment": "^1.1.1",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
