--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"react-select": "^5.2.2",
 		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
+		"recharts": "^2.1.12",
 		"tinymce": "^6.0.1",
 		"uuid": "^8.3.2",
 		"watch": "^0.13.0"
