--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@stripe/stripe-js": "^1.25.0",
 		"@tinymce/tinymce-react": "^4.0.0",
 		"axios": "^0.21.4",
+		"currency-symbol-map": "^5.1.0",
 		"editorjs-blocks-react-renderer": "^1.2.4",
 		"editorjs-text-alignment-blocktune": "^1.0.3",
 		"editorjs-text-color-plugin": "^1.1.22",
@@ -81,6 +82,6 @@
 		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
 		"recharts": "^2.1.12",
-		"tinymce": "^6.0.1" 
+		"tinymce": "^6.0.1"
 	}
 }
