--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
 		"recharts": "^2.1.12",
+		"sprintf-js": "^1.1.2",
 		"tinymce": "^6.0.1"
 	}
 }
