fixed some issues

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"react-dropzone": "^12.0.4",
 		"react-editor-js": "latest",
 		"react-google-drive-picker": "^1.2.0",
+		"react-modal-image": "^2.6.0",
 		"react-moment": "^1.1.1",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
