--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"react-colorful": "^5.5.1",
 		"react-content-loader": "^6.1.0",
 		"react-country-region-selector": "^3.4.0",
+		"react-csv": "^2.2.2",
 		"react-datepicker": "^4.7.0",
 		"react-dropzone": "^12.0.4",
 		"react-editor-js": "latest",
