--- a/package.json
+++ b/package.json
@@ -84,12 +84,13 @@
 		"react-google-drive-picker": "^1.2.0",
 		"react-modal-image": "^2.6.0",
 		"react-moment": "^1.1.1",
+		"react-native-validator-form": "^1.0.0",
 		"react-paginate": "^8.1.0",
 		"react-router-dom": "^6.2.1",
 		"react-select": "^5.2.2",
 		"react-to-print": "^2.14.6",
 		"react-toastify": "^8.1.1",
-		"recharts": "^2.1.12",
+		"recharts": "^0.22.5",
 		"sprintf-js": "^1.1.2",
 		"tinymce": "^6.0.1",
 		"typescript": "^4.8.4"
