--- a/package.json
+++ b/package.json
@@ -37,28 +37,10 @@
         "sass": "^1.37.0",
         "sass-loader": "^8.0.2",
         "tailwindcss": "^3.0.7",
-        "wp-pot": "^1.9.8"
+        "wp-pot": "^1.9.8",
+        "typescript": "^4.8.4"
     },
     "dependencies": {
-        "@editorjs/checklist": "latest",
-        "@editorjs/code": "latest",
-        "@editorjs/delimiter": "latest",
-        "@editorjs/editorjs": "^2.22.2",
-        "@editorjs/embed": "^2.5.1",
-        "@editorjs/header": "latest",
-        "@editorjs/image": "latest",
-        "@editorjs/inline-code": "latest",
-        "@editorjs/link": "latest",
-        "@editorjs/list": "latest",
-        "@editorjs/marker": "latest",
-        "@editorjs/nested-list": "latest",
-        "@editorjs/paragraph": "^2.8.0",
-        "@editorjs/quote": "latest",
-        "@editorjs/raw": "latest",
-        "@editorjs/simple-image": "latest",
-        "@editorjs/table": "latest",
-        "@editorjs/underline": "latest",
-        "@editorjs/warning": "latest",
         "@paypal/react-paypal-js": "^7.8.1",
         "@stripe/react-stripe-js": "^1.7.0",
         "@stripe/stripe-js": "^1.25.0",
@@ -69,9 +51,6 @@
         "@types/react-dom": "^18.0.6",
         "axios": "^0.21.4",
         "currency-symbol-map": "^5.1.0",
-        "editorjs-blocks-react-renderer": "^1.2.4",
-        "editorjs-text-alignment-blocktune": "^1.0.3",
-        "editorjs-text-color-plugin": "^1.1.22",
         "gapi-script": "^1.2.0",
         "iso-language-codes": "^1.1.0",
         "prop-types": "^15.6.2",
@@ -94,7 +73,6 @@
         "react-toastify": "^8.1.1",
         "recharts": "^2.1.12",
         "sprintf-js": "^1.1.2",
-        "tinymce": "^6.0.1",
-        "typescript": "^4.8.4"
+        "tinymce": "^6.0.1"
     }
 }
