--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
         "sass": "^1.37.0",
         "sass-loader": "^8.0.2",
         "tailwindcss": "^3.0.7",
-        "wp-pot": "^1.9.8",
-        "typescript": "^4.8.4"
+        "typescript": "^4.8.4",
+        "wp-pot": "^1.9.8"
     },
     "dependencies": {
         "@paypal/react-paypal-js": "^7.8.1",
@@ -69,6 +69,7 @@
         "react-paginate": "^8.1.0",
         "react-router-dom": "^6.2.1",
         "react-select": "^5.2.2",
+        "react-to-pdf": "^1.0.1",
         "react-to-print": "^2.14.6",
         "react-toastify": "^8.1.1",
         "recharts": "^2.1.12",
