--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "@types/node": "^18.7.23",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
-        "axios": "^0.21.4",
+        "autolinker": "^4.0.0",
+        "axios": "^1.6.1",
         "currency-symbol-map": "^5.1.0",
         "gapi-script": "^1.2.0",
         "iso-language-codes": "^1.1.0",
