implementing react query

--- a/package.json
+++ b/package.json
@@ -19,43 +19,17 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "@babel/preset-react": "^7.14.5",
-        "@wordpress/babel-preset-default": "^6.7.0",
-        "archiver": "^5.2.0",
-        "autoprefixer": "^10.4.0",
-        "cli-color": "^2.0.0",
-        "cross-env": "^7.0.3",
-        "emojic": "^1.1.16",
-        "eslint": "^8.44.0",
-        "eslint-plugin-react": "^7.32.2",
-        "fs-extra": "^9.0.1",
-        "laravel-mix": "^6.0.8",
-        "postcss": "^8.4.5",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "sass": "^1.37.0",
-        "sass-loader": "^8.0.2",
-        "tailwindcss": "^3.0.7",
-        "typescript": "^4.8.4",
-        "wp-pot": "^1.9.8"
-    },
     "dependencies": {
         "@paypal/react-paypal-js": "^7.8.1",
         "@stripe/react-stripe-js": "^1.7.0",
         "@stripe/stripe-js": "^1.25.0",
+        "@tanstack/react-query": "^5.8.4",
         "@tinymce/tinymce-react": "^4.0.0",
-        "@types/jest": "^29.0.3",
-        "@types/node": "^18.7.23",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
         "autolinker": "^4.0.0",
         "axios": "^1.6.1",
         "currency-symbol-map": "^5.1.0",
-        "gapi-script": "^1.2.0",
         "iso-language-codes": "^1.1.0",
         "prop-types": "^15.6.2",
-        "querystring": "^0.2.1",
         "react-beautiful-dnd": "latest",
         "react-colorful": "^5.5.1",
         "react-content-loader": "^6.1.0",
@@ -76,5 +50,26 @@
         "recharts": "^2.1.12",
         "sprintf-js": "^1.1.2",
         "tinymce": "^6.0.1"
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.14.5",
+        "@wordpress/babel-preset-default": "^6.7.0",
+        "archiver": "^5.2.0",
+        "autoprefixer": "^10.4.0",
+        "cli-color": "^2.0.0",
+        "cross-env": "^7.0.3",
+        "emojic": "^1.1.16",
+        "eslint": "^8.44.0",
+        "eslint-plugin-react": "^7.32.2",
+        "fs-extra": "^9.0.1",
+        "laravel-mix": "^6.0.8",
+        "postcss": "^8.4.5",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "sass": "^1.37.0",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "^3.0.7",
+        "typescript": "^4.8.4",
+        "wp-pot": "^1.9.8"
     }
 }
